--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,4 @@
 FROM openjdk:11-jre
 VOLUME /tmp
-COPY target/springBootDocker-1.0.0.jar springBootDocker-1.0.0.jar
-ENTRYPOINT ["java","-jar","/springBootDocker-1.0.0.jar"]
+ADD target/springBootDocker-1.0.0.jar springBootDocker.jar
+ENTRYPOINT ["java","-jar","/springBootDocker.jar"]
